other-vpol/advanced-restrict-image-registries/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: busybox01
    image: ghrc.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  namespace: imageregistries-ns01
spec:
  initContainers:
  - name: busybox01-init
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: busybox02-init
    image: ghcr.io/busybox:1.35
  containers:
  - name: busybox01
    image: ghcr.io/busybox:1.35
  - name: busybox02
    image: corp.img.io/busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  namespace: imageregistries-ns01
spec:
  initContainers:
  - name: busybox01-init
    image: corp.img.io/busybox:1.35
  containers:
  - name: busybox01
    image: img.corp.com/busybox:1.35
  - name: busybox02
    image: docker.io/busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  initContainers:
  - name: busybox01-init
    image: corp.img.io/busybox:1.35
  containers:
  - name: busybox01
    image: ghcr.io/busybox:1.35
  - name: busybox02
    image: ghcr.io/busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: imageregistries-ns01
spec:
  initContainers:
  - name: busybox01-init
    image: img.corp.com/busybox:1.35
  containers:
  - name: busybox02
    image: img.corp.com/busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  namespace: imageregistries-ns01
spec:
  initContainers:
  - name: busybox01-init
    image: ghcr.io/busybox:1.35
  containers:
  - name: busybox01
    image: docker.io/busybox:1.35
  - name: busybox02
    image: docker.io/busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  initContainers:
  - name: busybox01-init
    image: myregistry/busybox:1.35
  containers:
  - name: busybox01
    image: ghcr.io/busybox:1.35
  - name: busybox02
    image: ghcr.io/busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeploy01
  namespace: imageregistries-ns01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
      - name: busybox01-init
        image: img.corp.com/busybox:1.35
      - name: busybox02-init
        image: ghcr.io/busybox:1.35
      containers:
      - name: busybox01
        image: ghcr.io/busybox:1.35
      - name: busybox02
        image: img.corp.com/busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeploy01
  namespace: imageregistries-ns01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
      - name: busybox01-init
        image: docker.io/busybox:1.35
      - name: busybox02-init
        image: ghcr.io/busybox:1.35
      containers:
      - name: busybox01
        image: ghcr.io/busybox:1.35
      - name: busybox02
        image: corp.img.io/busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeploy01
  namespace: imageregistries-ns01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
      - name: busybox01-init
        image: img.corp.com/busybox:1.35
      - name: busybox02-init
        image: ghcr.io/busybox:1.35
      containers:
      - name: busybox01
        image: ghcr.io/busybox:1.35
      - name: busybox02
        image: img.corp.com/busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
  namespace: imageregistries-ns01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - name: busybox01-init
            image: docker.io/busybox:1.35
          - name: busybox02-init
            image: ghcr.io/busybox:1.35
          containers:
          - name: busybox01
            image: ghcr.io/busybox:1.35
          - name: busybox02
            image: corp.img.io/busybox:1.35
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
  namespace: imageregistries-ns01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - name: busybox01-init
            image: docker.io/busybox:1.35
          - name: busybox02-init
            image: ghcr.io/busybox:1.35
          containers:
          - name: busybox01
            image: ghcr.io/busybox:1.35
          - name: busybox02
            image: docker.io/busybox:1.35
          restartPolicy: OnFailure
