other-vpol/advanced-restrict-image-registries/.kyverno-test/context.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Context
metadata:
  name: context
spec:
  resources:
  - apiVersion: v1
    kind: ConfigMap
    metadata:
      name: clusterregistries
      namespace: default
    data:
      registries: "ghcr.io, myregistry"
  - apiVersion: v1
    kind: Namespace
    metadata:
      name: default
  - apiVersion: v1
    kind: Namespace
    metadata:
      name: imageregistries-ns01
      annotations:
        corp.com/allowed-registries: "img.corp.com, docker.io"
