other-vpol/advanced-restrict-image-registries/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
context: context.yaml
kind: Test
metadata:
  name: advanced-restrict-image-registries
policies:
- ../advanced-restrict-image-registries.yaml
resources:
- resource.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: advanced-restrict-image-registries
  resources:
  - badpod01
  - imageregistries-ns01/badpod02
  - imageregistries-ns01/badpod03
  - badpod04
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: advanced-restrict-image-registries
  resources:
  - imageregistries-ns01/goodpod01
  - imageregistries-ns01/goodpod02
  - goodpod03
  result: pass
- isValidatingPolicy: true
  kind: Deployment
  policy: advanced-restrict-image-registries
  resources:
  - imageregistries-ns01/baddeploy01
  result: fail
- isValidatingPolicy: true
  kind: Deployment
  policy: advanced-restrict-image-registries
  resources:
  - imageregistries-ns01/gooddeploy01
  result: pass
- isValidatingPolicy: true
  kind: CronJob
  policy: advanced-restrict-image-registries
  resources:
  - imageregistries-ns01/badcronjob01
  result: fail
- isValidatingPolicy: true
  kind: CronJob
  policy: advanced-restrict-image-registries
  resources:
  - imageregistries-ns01/goodcronjob01
  result: pass
variables: value.yaml
